fixed alignment issues with layout

--- a/laab/src/faqs.css
+++ b/laab/src/faqs.css
@@ -4,6 +4,7 @@ z-index: -1000;
   top: 2200px;
   width: 2000px;
 height: 1580px;
+left: -50px;
 }
 
 .faqsAnim {
