--- a/laab/src/features.css
+++ b/laab/src/features.css
@@ -2,7 +2,7 @@
   position: absolute;
     top: 1900px;
   display: flex;
-  margin-left: 150px;
+  margin-left: 80px;
   justify-content: center;
   align-items: flex-start;
   gap: 10rem;
