--- a/laab/src/index.css
+++ b/laab/src/index.css
@@ -289,7 +289,7 @@ justify-content: center;
   top: 850px;
   width: 750px;
   height: auto;
-  margin-left: 20px;
+  margin-left: -50px;
 
 }
 
